# task_management

./: .gitignore  .pre-commit-config.yaml  Brewfile.lock.json  README.md  docker-compose.yml
.github/workflows/: main.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  app.py  auth.py  db.py  main.py  models.py  settings.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/routers/: task.py  user.py
backend/app/tasks/: models.py  repository.py  routers.py  schema.py  service.py
backend/app/users/: models.py  repository.py  routers.py
backend/src/: main.py  models.py  test_main.py
backend/tests/: conftest.py  test_main.py  test_tasks.py  test_users.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: Register.tsx  TaskInput.tsx  TaskList.tsx
frontend/src/contexts/: AuthContext.tsx  TaskContext.tsx
frontend/src/pages/: _app.tsx  index.tsx  login.tsx  register.tsx  tasks.tsx
frontend/src/utils/: api.ts
